--- a/project/templates/user/register.html
+++ b/project/templates/user/register.html
@@ -25,10 +25,10 @@
               {{render_field(form.email, class ="form-control")}}
             </div>
             <div class="form-group">
-              {{render_field(form.username, class ="form-control")}}
+              {{render_field(form.nom_usario, class ="form-control")}}
             </div>
             <div class="form-group">
-              {{render_field(form.password, class ="form-control")}}
+              {{render_field(form.contrasena, class ="form-control")}}
             </div>
             <div class="form-group">
               {{render_field(form.confirm, class ="form-control")}}
