--- a/project/templates/main/pistason.html
+++ b/project/templates/main/pistason.html
@@ -49,9 +49,9 @@
             {% endif %}
         </div>
         <div>
-        {% if pista.comentario_pista_son is not none %}
+        {% if pista.coment_pista_son is not none %}
             <h4>Sobre el Pista</h4>
-            <h3 class="indented"> {{ pista.comentario_pista_son }}</h3>
+            <h3 class="indented"> {{ pista.coment_pista_son }}</h3>
             <br>
         {% endif %}
         </div>
