--- a/project/static/css/dynamic-form.css
+++ b/project/static/css/dynamic-form.css
@@ -1,3 +1,4 @@
+/* For the dynamic form elements */
 [data-role="dynamic-fields"] > .form-custom + .form-custom {
 }
 
@@ -19,4 +20,27 @@
     display: table-cell;
     vertical-align: bottom;
     float: none;
+}
+
+/* For vertically centering modals */
+
+.vertical-alignment-helper {
+    display:table;
+    height: 100%;
+    width: 100%;
+    pointer-events:none; /* This makes sure that we can still click outside of the modal to close it */
+}
+.vertical-align-center {
+    /* To center vertically */
+    display: table-cell;
+    vertical-align: middle;
+    pointer-events:none;
+}
+.modal-content {
+    /* Bootstrap sets the size of the modal in the modal-dialog class, we need to inherit it */
+    width:inherit;
+    height:inherit;
+    /* To center horizontally */
+    margin: 0 auto;
+    pointer-events: all;
 }
