--- a/project/templates/user/info.html
+++ b/project/templates/user/info.html
@@ -36,20 +36,12 @@
             <div class="form-group">
               {{render_field(form.telefono, class ="form-control")}}
             </div>
-            <div class="row individual">
-                <div class="form-group col-sm-6">
+            <div class="form-group">
                 {{render_field(form.fecha_comienzo, class ="form-control"
-                                       , placeholder="dd/mm/aaaa")}}
-                </div>
-                 <div class="form-group col-sm-6">
-                {{render_field(form.genero, class ="form-control")}}
-                </div>
+                                   , placeholder="dd/mm/aaaa")}}
             </div>
-            <div class="organization">
-                <div class="form-group">
-                {{render_field(form.fecha_comienzo_ag, class ="form-control"
-                                               , placeholder="dd/mm/aaaa")}}
-                </div>
+            <div class="form-group individual">
+                {{render_field(form.genero, class ="form-control")}}
             </div>
             <div class="row">
                 <div class="form-group col-sm-3">
@@ -65,37 +57,38 @@
                   {{render_field(form.pais, class ="form-control")}}
                 </div>
             </div>
-
+            <div class="dyn-form-container">
             {% for org_form in form.org_form %}
-            <div class="row individual">
-                <div data-role="dynamic-fields">
-                    <div class="form-custom">
-                        <div class="form-group col-md-3">
-                          {{render_field(org_form.agregar_id, class ="form-control" )}}
-                        </div>
-                        <div class="form-group col-md-3">
-                          {{render_field(org_form.titulo, class ="form-control")}}
-                        </div>
-                        <div class="form-group col-md-2">
-                          {{render_field(org_form.fecha_comienzo, class ="form-control"
-                                                             , placeholder="dd/mm/aaaa")}}
-                        </div>
-                        <div class="form-group col-md-2">
-                          {{render_field(org_form.fecha_finale, class ="form-control"
-                                                            , placeholder="dd/mm/aaaa")}}
-                        </div>
-                        <div class="dyn-buttons col-md-2 text-center">
-                            <button class="pull-down btn btn-default" data-role="remove">
-                                <div class="glyphicon glyphicon-remove"></div>
-                            </button>
-                            <button class="pull-down btn btn-basic" data-role="add">
-                                <div class="glyphicon glyphicon-plus"></div>
-                            </button>
-                        </div>
-                    </div>  <!-- /div.form-inline -->
-                </div>  <!-- /div[data-role="dynamic-fields"] -->
-            </div>  <!-- /div.row -->
-            {% endfor %}
+                <div class="row individual">
+                    <div data-role="dynamic-fields">
+                        <div class="form-custom">
+                            <div class="form-group col-md-3">
+                              {{render_field(org_form.agregar_id, class ="form-control" )}}
+                            </div>
+                            <div class="form-group col-md-3">
+                              {{render_field(org_form.titulo, class ="form-control")}}
+                            </div>
+                            <div class="form-group col-md-2">
+                              {{render_field(org_form.fecha_comienzo, class ="form-control"
+                                                                 , placeholder="dd/mm/aaaa")}}
+                            </div>
+                            <div class="form-group col-md-2">
+                              {{render_field(org_form.fecha_finale, class ="form-control"
+                                                                , placeholder="dd/mm/aaaa")}}
+                            </div>
+                            <div class="dyn-buttons col-md-2 text-center">
+                                <button class="pull-down btn btn-default" data-role="remove">
+                                    <div class="glyphicon glyphicon-remove"></div>
+                                </button>
+                                <button class="pull-down btn btn-basic" data-role="add">
+                                    <div class="glyphicon glyphicon-plus"></div>
+                                </button>
+                            </div>
+                        </div>  <!-- /div.form-inline -->
+                    </div>  <!-- /div[data-role="dynamic-fields"] -->
+                </div>  <!-- /div.row -->
+                {% endfor %}
+            </div>
 
             <div class="organization">
                 <div class="form-group">
