--- a/project/templates/user/poner_pers.html
+++ b/project/templates/user/poner_pers.html
@@ -7,27 +7,14 @@
 
 <div>
     <br>
-    <h2>Actualizar una organización</h2>
+    <h2>Añadir una persona u organización</h2>
     <br>
     <p>Por favor, rellene el siguiente formulario.</p>
     <form id="add-entity-form" method='POST' action="">
         {{ form.csrf_token }}
         <br>
         <div class="center-block skinny">
-            <div class="form-group" id="user-type">
-                {% for opt in form.user_type %}
-                    <div style="display: inline-block;">{{ opt }} &nbsp;</div>
-                    <div style="display: inline-block;">{{ opt.label }} &nbsp;</div>
-                {% endfor %}
-                {% if form.user_type.errors %}
-                    <ul class="errors">
-                    {% for error in form.user_type.errors %}
-                        <li>{{ error }}</li>
-                    {% endfor %}
-                    </ul>
-                {% endif %}
-            </div>
-            <div class="row individual">
+            <div class="row">
                 <div class="form-group col-sm-4">
                   {{render_field(form.nom_part, class ="form-control")}}
                 </div>
@@ -36,11 +23,6 @@
                 </div>
                 <div class="form-group col-sm-4">
                   {{render_field(form.seudonimo, class ="form-control")}}
-                </div>
-            </div>
-            <div class="organization">
-                <div class="form-group">
-                  {{render_field(form.nom_part_ag, class ="form-control")}}
                 </div>
             </div>
             <div class="form-group">
@@ -56,7 +38,7 @@
             <div class="form-group">
               {{render_field(form.email, class ="form-control")}}
             </div>
-            <div class="form-group individual">
+            <div class="form-group">
                 {{render_field(form.genero, class ="form-control")}}
             </div>
             <div class="row">
@@ -84,7 +66,7 @@
                   {{render_field(form.pais, class ="form-control")}}
                 </div>
             </div>
-            <div class="row individual">
+            <div class="row">
                 <h3>Muer</h3>
                 <div class="form-group col-sm-3">
                   {{render_field(form.ciudad_muer, class ="form-control")}}
@@ -99,44 +81,39 @@
                   {{render_field(form.pais_muer, class ="form-control")}}
                 </div>
             </div>
-
+            <div class="dyn-form-container">
             {% for org_form in form.org_form %}
-            <div class="row individual">
-                <div data-role="dynamic-fields">
-                    <div class="form-custom">
-                        <div class="form-group col-md-3">
-                          {{render_field(org_form.agregar_id, class ="form-control" )}}
-                        </div>
-                        <div class="form-group col-md-3">
-                          {{render_field(org_form.titulo, class ="form-control")}}
-                        </div>
-                        <div class="form-group col-md-2">
-                          {{render_field(org_form.fecha_comienzo, class ="form-control"
-                                                             , placeholder="dd/mm/aaaa")}}
-                        </div>
-                        <div class="form-group col-md-2">
-                          {{render_field(org_form.fecha_finale, class ="form-control"
-                                                            , placeholder="dd/mm/aaaa")}}
-                        </div>
-                        <div class="dyn-buttons col-md-2 text-center">
-                            <button class="pull-down btn btn-default" data-role="remove">
-                                <div class="glyphicon glyphicon-remove"></div>
-                            </button>
-                            <button class="pull-down btn btn-basic" data-role="add">
-                                <div class="glyphicon glyphicon-plus"></div>
-                            </button>
-                        </div>
-                    </div>  <!-- /div.form-inline -->
-                </div>  <!-- /div[data-role="dynamic-fields"] -->
-            </div>  <!-- /div.row -->
-            {% endfor %}
-
-            <div class="organization">
-                <div class="form-group">
-                  {{render_field(form.tipo_agregar, class ="form-control")}}
-                </div>
+                <div class="row">
+                    <div data-role="dynamic-fields">
+                        <div class="form-custom">
+                            <div class="form-group col-md-3">
+                              {{render_field(org_form.agregar_id, class ="form-control" )}}
+                            </div>
+                            <div class="form-group col-md-3">
+                              {{render_field(org_form.titulo, class ="form-control")}}
+                            </div>
+                            <div class="form-group col-md-2">
+                              {{render_field(org_form.fecha_comienzo, class ="form-control"
+                                                                 , placeholder="dd/mm/aaaa")}}
+                            </div>
+                            <div class="form-group col-md-2">
+                              {{render_field(org_form.fecha_finale, class ="form-control"
+                                                                , placeholder="dd/mm/aaaa")}}
+                            </div>
+                            <div class="dyn-buttons col-md-2 text-center">
+                                <button class="pull-down btn btn-default" data-role="remove">
+                                    <div class="glyphicon glyphicon-remove"></div>
+                                </button>
+                                <button class="pull-down btn btn-basic" data-role="add">
+                                    <div class="glyphicon glyphicon-plus"></div>
+                                </button>
+                            </div>
+                        </div>  <!-- /div.form-inline -->
+                    </div>  <!-- /div[data-role="dynamic-fields"] -->
+                </div>  <!-- /div.row -->
+                {% endfor %}
             </div>
-            <div class="row individual">
+            <div class="row">
                 <div class="form-group col-sm-6">
                   {{render_field(form.nom_paterno, class ="form-control")}}
                 </div>
