--- a/project/templates/user/poner_pista.html
+++ b/project/templates/user/poner_pista.html
@@ -4,39 +4,73 @@
 
 {% from "includes/_formhelpers.html" import render_field %}
 
-
 <div>
     <br>
-    <h2>Añadir una Composicion</h2>
+    <h2>Añadir una pista de audio</h2>
     <br>
     <p>Por favor, agregue información adicional sobre este trabajo.</p>
     <form id="add-entity-form" method='POST' action="">
         {{ form.csrf_token }}
         <br>
         <div class="center-block skinny">
+            <div class="form-group">
+                {{render_field(form.comp_id, class ="form-control")}}
+            </div>
             <div class="row">
                 <div class="form-group col-md-4">
-                  {{render_field(form.nom_tit, class ="form-control")}}
+                    {{render_field(form.numero_de_pista, class ="form-control")}}
+                </div>
+                 <div class="form-group col-md-4">
+                    {{render_field(form.medio, class ="form-control")}}
                 </div>
                 <div class="form-group col-md-4">
-                  {{render_field(form.nom_alt, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-4">
-                  {{render_field(form.fecha_pub, class ="form-control", placeholder='dd/mm/aaaa')}}
+                    {{render_field(form.serie_id, class ="form-control")}}
                 </div>
             </div>
+            <div class="row">
+                <div class="form-group col-md-4">
+                    {{render_field(form.fecha_grab, class ="form-control", placeholder='dd/mm/aaaa')}}
+                </div>
+                 <div class="form-group col-md-4">
+                    {{render_field(form.fecha_dig, class ="form-control", placeholder='dd/mm/aaaa')}}
+                </div>
+                <div class="form-group col-md-4">
+                    {{render_field(form.fecha_cont, class ="form-control", placeholder='dd/mm/aaaa')}}
+                </div>
+            </div>
+            <div class="row">
+                <h3>Lugar de interpretación</h3>
+                <div class="form-group col-md-3">
+                  {{render_field(form.ciudad, class ="form-control")}}
+                </div>
+                <div class="form-group col-md-3">
+                  {{render_field(form.nom_subdivision, class ="form-control")}}
+                </div>
+                <div class="form-group col-md-3">
+                  {{render_field(form.tipo_subdivision, class ="form-control")}}
+                </div>
+                <div class="form-group col-md-3">
+                  {{render_field(form.pais, class ="form-control")}}
+                </div>
+            </div>
+            <div class="form-group">
+              {{render_field(form.archivo, class ="form-control")}}
+            </div>
             <div class="dyn-form-container">
-                {% for sub_form in form.part_id_form %}
+                {% for sub_form in form.interp_form %}
                 <div class="row">
                     <div data-role="dynamic-fields">
                         <div class="form-custom">
-                            <div class="form-group col-md-5">
+                            <div class="form-group col-md-3">
                               {{render_field(sub_form.part_id, class ="form-control" )}}
                             </div>
-                            <div class="form-group col-md-5">
-                              {{render_field(sub_form.rol_composicion, class ="form-control")}}
+                            <div class="form-group col-md-3">
+                              {{render_field(sub_form.rol_pista_son, class ="form-control" )}}
                             </div>
-                            <div class="dyn-buttons col-md-2 text-center">
+                            <div class="form-group col-md-3">
+                              {{render_field(sub_form.instrumento_id, class ="form-control" )}}
+                            </div>
+                            <div class="dyn-buttons col-md-3 text-center">
                                 <button class="pull-down btn btn-default" data-role="remove">
                                     <div class="glyphicon glyphicon-remove"></div>
                                 </button>
@@ -51,12 +85,12 @@
             </div>
             <hr>
             <div class="dyn-form-container">
-                {% for sub_form in form.tema_form %}
+                {% for sub_form in form.gen_mus_form %}
                 <div class="row">
                     <div data-role="dynamic-fields">
                         <div class="form-custom">
                             <div class="form-group col-md-8">
-                              {{render_field(sub_form.tema_id, class ="form-control" )}}
+                              {{render_field(sub_form.gen_mus_id, class ="form-control" )}}
                             </div>
                             <div class="dyn-buttons col-md-2 text-center">
                                 <button class="pull-down btn btn-default" data-role="remove">
@@ -71,46 +105,13 @@
                 </div>  <!-- /div.row -->
                 {% endfor %}
             </div>
-            <hr>
-            <div class="dyn-form-container">
-                {% for sub_form in form.idioma_form %}
-                <div class="row">
-                    <div data-role="dynamic-fields">
-                        <div class="form-custom">
-                            <div class="form-group col-md-8">
-                              {{render_field(sub_form.idioma_id, class ="form-control" )}}
-                            </div>
-                            <div class="dyn-buttons col-md-2 text-center">
-                                <button class="pull-down btn btn-default" data-role="remove">
-                                    <div class="glyphicon glyphicon-remove"></div>
-                                </button>
-                                <button class="pull-down btn btn-basic" data-role="add">
-                                    <div class="glyphicon glyphicon-plus"></div>
-                                </button>
-                            </div>
-                        </div>  <!-- /div.form-inline -->
-                    </div>  <!-- /div[data-role="dynamic-fields"] -->
-                </div>  <!-- /div.row -->
-                {% endfor %}
-            </div>
-            <br>
             <div class="form-group">
-                <div style="display: inline-block;">{{ form.references }} &nbsp;</div>
-                <div style="display: inline-block;">{{ form.references.label }} &nbsp;</div>
-            </div>
-            <div id="references-collapsible" class="collapse skinny">
-                <div class="form-group">
-                    {{render_field(form.comp_id, class ="form-control" )}}
-                </div>
-            </div>
-            <div class="form-group">
-              {{render_field(form.texto, class ="form-control")}}
+              {{render_field(form.coment_pista_son, class ="form-control")}}
             </div>
             <br>
              <div>
                 <button class="btn btn-success" type="submit">Enviar</button>
             </div>
-
         </div>
     </form>
 </div>
