--- a/project/templates/user/poner_pista.html
+++ b/project/templates/user/poner_pista.html
@@ -61,16 +61,16 @@
                 <div class="row">
                     <div data-role="dynamic-fields">
                         <div class="form-custom">
-                            <div class="form-group col-md-3">
+                            <div class="form-group col-md-4">
                               {{render_field(sub_form.part_id, class ="form-control" )}}
                             </div>
-                            <div class="form-group col-md-3">
-                              {{render_field(sub_form.rol_pista_son, class ="form-control" )}}
+                            <div class="form-group col-md-2">
+                              {{render_field(sub_form.rol_pista_son, class ="form-control rol-pista" )}}
                             </div>
-                            <div class="form-group col-md-3">
-                              {{render_field(sub_form.instrumento_id, class ="form-control" )}}
+                            <div class="form-group col-md-4">
+                              {{render_field(sub_form.instrumento_id, class ="form-control instrumento" )}}
                             </div>
-                            <div class="dyn-buttons col-md-3 text-center">
+                            <div class="dyn-buttons col-md-2 text-center">
                                 <button class="pull-down btn btn-default" data-role="remove">
                                     <div class="glyphicon glyphicon-remove"></div>
                                 </button>
