--- a/project/templates/queryMacros.html
+++ b/project/templates/queryMacros.html
@@ -28,8 +28,8 @@
         {% if result.ciudad is not none and result.ciudad is defined %}
             {{ result.ciudad }},
         {% endif %}
-        {% if result.nom_subdivision is not none and result.nom_subdivision is defined %}
-           {{ result.nom_subdivision }},
+        {% if result.subdivision is not none and result.subdivision is defined %}
+           {{ result.subdivision }},
         {% endif %}
         {% if result.pais is not none %}
            {{ result.pais }}
@@ -49,8 +49,8 @@
         {% if result.ciudad is not none and result.ciudad is defined %}
             {{ result.ciudad }},
         {% endif %}
-        {% if result.nom_subdivision is not none and result.nom_subdivision is defined %}
-           {{ result.nom_subdivision }},
+        {% if result.subdivision is not none and result.subdivision is defined %}
+           {{ result.subdivision }},
         {% endif %}
         {% if result.pais is not none %}
            {{ result.pais }}
