--- a/project/templates/user/poner_pista.html
+++ b/project/templates/user/poner_pista.html
@@ -40,16 +40,13 @@
             </div>
             <div class="row">
                 <h3>Lugar de interpretación</h3>
-                <div class="form-group col-md-3">
+                <div class="form-group col-md-4">
                   {{render_field(form.ciudad, class ="form-control")}}
                 </div>
-                <div class="form-group col-md-3">
-                  {{render_field(form.nom_subdivision, class ="form-control")}}
+                <div class="form-group col-md-4">
+                  {{render_field(form.subdivision, class ="form-control")}}
                 </div>
-                <div class="form-group col-md-3">
-                  {{render_field(form.tipo_subdivision, class ="form-control")}}
-                </div>
-                <div class="form-group col-md-3">
+                <div class="form-group col-md-4">
                   {{render_field(form.pais, class ="form-control")}}
                 </div>
             </div>
