--- a/project/templates/user/poner_ag.html
+++ b/project/templates/user/poner_ag.html
@@ -17,41 +17,41 @@
             <div class="form-group">
               {{render_field(form.nom_part_ag, class ="form-control")}}
             </div>
-            <div class="form-group">
-              {{render_field(form.sitio_web, class ="form-control"
-                                         , placeholder="https://www.example.com")}}
+            <div class="row">
+                <div class="form-group col-md-6">
+                  {{render_field(form.sitio_web, class ="form-control"
+                                             , placeholder="https://www.example.com")}}
+                </div>
+                <div class="form-group col-md-6">
+                  {{render_field(form.telefono, class ="form-control"
+                            , placeholder="(55)5555-5555")}}
+                </div>
             </div>
             <div class="form-group">
               {{render_field(form.direccion, class ="form-control")}}
             </div>
             <div class="form-group">
-              {{render_field(form.telefono, class ="form-control")}}
-            </div>
-            <div class="form-group">
               {{render_field(form.email, class ="form-control")}}
             </div>
             <div class="row">
-                <div class="form-group col-sm-6">
+                <div class="form-group col-md-6">
                 {{render_field(form.fecha_comienzo, class ="form-control"
                                                , placeholder="dd/mm/aaaa")}}
                 </div>
-                <div class="form-group col-sm-6">
+                <div class="form-group col-md-6">
                 {{render_field(form.fecha_finale, class ="form-control"
                                             , placeholder="dd/mm/aaaa")}}
                 </div>
             </div>
             <div class="row">
                 <h3>Origen</h3>
-                <div class="form-group col-sm-3">
+                <div class="form-group col-md-4">
                   {{render_field(form.ciudad, class ="form-control")}}
                 </div>
-                <div class="form-group col-sm-3">
-                  {{render_field(form.nom_subdivision, class ="form-control")}}
+                <div class="form-group col-md-4">
+                  {{render_field(form.subdivision, class ="form-control")}}
                 </div>
-                <div class="form-group col-sm-3">
-                  {{render_field(form.tipo_subdivision, class ="form-control")}}
-                </div>
-                <div class="form-group col-sm-3">
+                <div class="form-group col-md-4">
                   {{render_field(form.pais, class ="form-control")}}
                 </div>
             </div>
@@ -61,8 +61,10 @@
             <div class="form-group">
               {{render_field(form.coment_part, class ="form-control")}}
             </div>
-             <div class="row">
+             <div>
                 <input data-inline="true" type="submit" class="btn btn-primary" value="Enviar">
+                 <a data-inline="true" role="button" class="btn btn-info"
+                    href="{{ url_for('user.profile', _anchor='tab_part') }}">Omitir</a>
             </div>
         </div>
     </form>
