--- a/project/templates/user/poner_part.html
+++ b/project/templates/user/poner_part.html
@@ -3,7 +3,7 @@
 {% block body %}
 
 {% from "includes/_formhelpers.html" import render_field %}
-{% from "queryMacros.html" import nom, lugar, fecha, render_profile %}
+{% from "queryMacros.html" import nom, lugar, render_profile %}
 
 <div>
     <br>
@@ -28,13 +28,16 @@
                 {% endif %}
             </div>
             <div class="row individual">
-                <div class="form-group col-sm-4">
+                <div class="form-group col-md-3">
                   {{render_field(form.nom_part, class ="form-control")}}
                 </div>
-                <div class="form-group col-sm-4">
-                  {{render_field(form.nom_segundo, class ="form-control")}}
+                <div class="form-group col-md-3">
+                  {{render_field(form.nom_paterno, class ="form-control")}}
                 </div>
-                <div class="form-group col-sm-4">
+                <div class="form-group col-md-3">
+                  {{render_field(form.nom_materno, class ="form-control")}}
+                </div>
+                <div class="form-group col-md-3">
                   {{render_field(form.seudonimo, class ="form-control")}}
                 </div>
             </div>
@@ -47,11 +50,13 @@
               {{render_field(form.sitio_web, class ="form-control"
                                          , placeholder="https://www.example.com")}}
             </div>
-            <div class="form-group">
-              {{render_field(form.direccion, class ="form-control")}}
-            </div>
-            <div class="form-group">
-              {{render_field(form.telefono, class ="form-control")}}
+            <div class="row organization">
+                <div class="form-group col-md-6">
+                  {{render_field(form.direccion, class ="form-control")}}
+                </div>
+                <div class="form-group col-md-6">
+                  {{render_field(form.telefono, class ="form-control")}}
+                </div>
             </div>
             <div class="form-group">
               {{render_field(form.email, class ="form-control")}}
@@ -71,83 +76,69 @@
             </div>
             <div class="row">
                 <h3>Origen</h3>
-                <div class="form-group col-sm-3">
+                <div class="form-group col-md-4">
                   {{render_field(form.ciudad, class ="form-control")}}
                 </div>
-                <div class="form-group col-sm-3">
-                  {{render_field(form.nom_subdivision, class ="form-control")}}
+                <div class="form-group col-md-4">
+                  {{render_field(form.subdivision, class ="form-control")}}
                 </div>
-                <div class="form-group col-sm-3">
-                  {{render_field(form.tipo_subdivision, class ="form-control")}}
-                </div>
-                <div class="form-group col-sm-3">
+                <div class="form-group col-md-4">
                   {{render_field(form.pais, class ="form-control")}}
                 </div>
             </div>
             <div class="row individual">
                 <h3>Muer</h3>
-                <div class="form-group col-sm-3">
+                <div class="form-group col-md-4">
                   {{render_field(form.ciudad_muer, class ="form-control")}}
                 </div>
-                <div class="form-group col-sm-3">
-                  {{render_field(form.nom_subdivision_muer, class ="form-control")}}
+                <div class="form-group col-md-4">
+                  {{render_field(form.subdivision_muer, class ="form-control")}}
                 </div>
-                <div class="form-group col-sm-3">
-                  {{render_field(form.tipo_subdivision_muer, class ="form-control")}}
-                </div>
-                <div class="form-group col-sm-3">
+                <div class="form-group col-md-4">
                   {{render_field(form.pais_muer, class ="form-control")}}
                 </div>
             </div>
-
-            {% for org_form in form.org_form %}
-            <div class="row individual">
-                <div data-role="dynamic-fields">
-                    <div class="form-custom">
-                        <div class="form-group col-md-3">
-                          {{render_field(org_form.agregar_id, class ="form-control" )}}
-                        </div>
-                        <div class="form-group col-md-3">
-                          {{render_field(org_form.titulo, class ="form-control")}}
-                        </div>
-                        <div class="form-group col-md-2">
-                          {{render_field(org_form.fecha_comienzo, class ="form-control"
-                                                             , placeholder="dd/mm/aaaa")}}
-                        </div>
-                        <div class="form-group col-md-2">
-                          {{render_field(org_form.fecha_finale, class ="form-control"
-                                                            , placeholder="dd/mm/aaaa")}}
-                        </div>
-                        <div class="dyn-buttons col-md-2 text-center">
-                            <button class="pull-down btn btn-default" data-role="remove">
-                                <div class="glyphicon glyphicon-remove"></div>
-                            </button>
-                            <button class="pull-down btn btn-basic" data-role="add">
-                                <div class="glyphicon glyphicon-plus"></div>
-                            </button>
-                        </div>
-                    </div>  <!-- /div.form-inline -->
-                </div>  <!-- /div[data-role="dynamic-fields"] -->
-            </div>  <!-- /div.row -->
-            {% endfor %}
-
+            <div class="dyn-form-container">
+                {% for sub_form in form.org_form %}
+                <div class="row individual">
+                    <div data-role="dynamic-fields">
+                        <div class="form-custom">
+                            <div class="form-group col-md-3">
+                              {{render_field(sub_form.agregar_id, class ="form-control" )}}
+                            </div>
+                            <div class="form-group col-md-3">
+                              {{render_field(sub_form.titulo, class ="form-control")}}
+                            </div>
+                            <div class="form-group col-md-2">
+                              {{render_field(sub_form.fecha_comienzo, class ="form-control"
+                                                                 , placeholder="dd/mm/aaaa")}}
+                            </div>
+                            <div class="form-group col-md-2">
+                              {{render_field(sub_form.fecha_finale, class ="form-control"
+                                                                , placeholder="dd/mm/aaaa")}}
+                            </div>
+                            <div class="dyn-buttons col-md-2 text-center">
+                                <button class="pull-down btn btn-default" data-role="remove">
+                                    <div class="glyphicon glyphicon-remove"></div>
+                                </button>
+                                <button class="pull-down btn btn-basic" data-role="add">
+                                    <div class="glyphicon glyphicon-plus"></div>
+                                </button>
+                            </div>
+                        </div>  <!-- /div.form-inline -->
+                    </div>  <!-- /div[data-role="dynamic-fields"] -->
+                </div>  <!-- /div.row -->
+                {% endfor %}
+            </div>
             <div class="organization">
                 <div class="form-group">
                   {{render_field(form.tipo_agregar, class ="form-control")}}
                 </div>
             </div>
-            <div class="row individual">
-                <div class="form-group col-sm-6">
-                  {{render_field(form.nom_paterno, class ="form-control")}}
-                </div>
-                <div class="form-group col-sm-6">
-                  {{render_field(form.nom_materno, class ="form-control")}}
-                </div>
-            </div>
             <div class="form-group">
               {{render_field(form.coment_part, class ="form-control")}}
             </div>
-             <div class="row">
+             <div>
                 <input data-inline="true" type="submit" class="btn btn-primary" value="Enviar">
             </div>
         </div>
